提交卡片图标完善